[package]
name = "lakefs_cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
config = "0.13.3"
duckdb = { version = "0.8.1", features = ["parquet", "httpfs", "serde_json"] }
env_logger = "0.10.0"
lakefs-rs = "1.1.7"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
